[package]
name = "contract"
version = "0.0.1"
authors = []
edition = "2021"
description = "Smart Contract"
license = "Apache-2.0"
repository = ""
homepage = ""
documentation = ""

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[profile.release]
rpath = false
lto = true
overflow-checks = true
opt-level = 3
debug = false
debug-assertions = false
codegen-units = 1
incremental = false

[dependencies]
cw-utils = { version = "1.0.3" }
cw2 = { version = "1.1.2" }
cw20 = { version = "1.1.2" }
cw-storage-plus = { version = "1.2.0" }
cosmwasm-schema = { version = "1.5.5" }
cosmwasm-std = { version = "1.5.5" }
schemars = { version = "0.8.16" }
serde = { version = "1.0.196", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.134" }
thiserror = { version = "1.0.56" }
base64 = "0.22.1"
cw-orch = { version = "0.24.1", features = ["daemon"] }

[dev-dependencies]
cw-multi-test = { version = "0.20.0" }
dotenv = { version = "0.15.0" }
pretty_env_logger = { version = "0.5.0" }
anybuf = { version = "0.5.0" }
cosmos-sdk-proto = { version = "0.21.1", default-features = false }
cosmrs = { version = "0.14.0" }
